--- a/releases/mongodb.yaml
+++ b/releases/mongodb.yaml
@@ -20,7 +20,7 @@ spec:
     usePassword: false
     persistence:
       enabled: false
-    securityContext:
-      enabled: true
-      fsGroup: 0
-    #  runAsUser: 0
+#    securityContext:
+#      enabled: true
+#      fsGroup: 0
+#    #  runAsUser: 0
